--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
           avd-name: myavd
           no-window: true
           restore-gradle-cache-prefix: v1a
+          post-emulator-launch-assemble-command: ""
       - android/run-tests:
           test-command: ./gradlew test
       - android/save-gradle-cache:
