--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
           test-command: ./gradlew test
       - android/save-gradle-cache:
           cache-prefix: v1a
+      - store_test_results:
+          path: test-results
+
 workflows:
   test:
     jobs:
