--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,6 @@ jobs:
           system-image: system-images;android-29;default;x86
       - android/start-emulator:
           avd-name: myavd
-          no-window: true
           restore-gradle-cache-prefix: v1a
           post-emulator-launch-assemble-command: ""
       - android/disable-animations
@@ -23,7 +22,7 @@ jobs:
       - android/save-gradle-cache:
           cache-prefix: v1a
       - store_test_results:
-          path: test-results
+          path: build/test-results
 
 workflows:
   test:
